v0.5.0/_sources/projections/cyl/cyl_mercator.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/cyl/cyl_mercator.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_cyl_cyl_mercator.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_cyl_cyl_mercator.py:


Mercator
========

The Mercator projection takes its name from the Flemish cartographer Gheert
Cremer, better known as Gerardus Mercator, who presented it in 1569. The
projection is a cylindrical and conformal, with no distortion along the
equator. A major navigational feature of the projection is that a line of
constant azimuth is straight. Such a line is called a rhumb line or loxodrome.
Thus, to sail from one point to another one only had to connect the points with
a straight line, determine the azimuth of the line, and keep this constant
course for the entire voyage. The Mercator projection has been used extensively
for world maps in which the distortion towards the polar regions grows
rather large.

**m**\ [*lon0[/lat0]*]\ */scale* or **M**\ [*lon0*][*/lat0*]\ */width*

The projection is set with **m** or **M**. The central meridian is set with the
optional *lon0* and the standard parallel is set with the optional *lat0*.
The figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 22-27



.. image-sg:: /projections/cyl/images/sphx_glr_cyl_mercator_001.png
   :alt: cyl mercator
   :srcset: /projections/cyl/images/sphx_glr_cyl_mercator_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    fig.coast(region=[0, 360, -80, 80], frame="afg", land="red", projection="M0/0/12c")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.975 seconds)


.. _sphx_glr_download_projections_cyl_cyl_mercator.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: cyl_mercator.py <cyl_mercator.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: cyl_mercator.ipynb <cyl_mercator.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
